src/scss/base/_defaults.scss
* {
  box-sizing: border-box;
}

body,
html {
  height: 100%;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;

  @media screen and (prefers-reduced-motion: reduce) {
    scroll-behavior: auto;
  }
}

body {
  display: flex;
  flex-direction: column;
}

main {
  flex-grow: 1;
  margin-top: -12rem;
}

.mobile-logo {
  z-index: 1;
  position: absolute;
  top: 3rem;
  left: 2rem;

  @include media($screen-sm) {
    display: none;
  }
}

footer {
  flex-shrink: 0;
  margin-top: auto;
}

